--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3names.dtx Copyright (C) 1990-2015 The LaTeX3 project
+%% File: l3names.dtx Copyright (C) 1990-2016 The LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -790,6 +790,7 @@
   \__kernel_primitive:NN \aligntab                    \luatex_aligntab:D
   \__kernel_primitive:NN \attribute                   \luatex_attribute:D
   \__kernel_primitive:NN \attributedef                \luatex_attributedef:D
+  \__kernel_primitive:NN \begincsname                 \luatex_begincsname:D
   \__kernel_primitive:NN \catcodetable                \luatex_catcodetable:D
   \__kernel_primitive:NN \clearmarks                  \luatex_clearmarks:D
   \__kernel_primitive:NN \crampeddisplaystyle         \luatex_crampeddisplaystyle:D
@@ -800,6 +801,8 @@
   \__kernel_primitive:NN \dviextension                \luatex_dviextension:D
   \__kernel_primitive:NN \dvifeedback                 \luatex_dvifeedback:D
   \__kernel_primitive:NN \dvivariable                 \luatex_dvivariable:D
+  \__kernel_primitive:NN \etoksapp                    \luatex_etoksapp:D
+  \__kernel_primitive:NN \etokspre                    \luatex_etokspre:D
   \__kernel_primitive:NN \expanded                    \luatex_expanded:D
   \__kernel_primitive:NN \fontid                      \luatex_fontid:D
   \__kernel_primitive:NN \formatname                  \luatex_formatname:D
@@ -808,6 +811,7 @@
   \__kernel_primitive:NN \hyphenationmin              \luatex_hypenationmin:D
   \__kernel_primitive:NN \gleaders                    \luatex_gleaders:D
   \__kernel_primitive:NN \initcatcodetable            \luatex_initcatcodetable:D
+  \__kernel_primitive:NN \lastnamedcs                 \luatex_lastnamedcs:D
   \__kernel_primitive:NN \latelua                     \luatex_latelua:D
   \__kernel_primitive:NN \letcharcode                 \luatex_letcharcode:D
   \__kernel_primitive:NN \luaescapestring             \luatex_luaescapestring:D
@@ -824,7 +828,7 @@
   \__kernel_primitive:NN \nohrule                     \luatex_nohrule:D
   \__kernel_primitive:NN \nokerns                     \luatex_nokerns:D
   \__kernel_primitive:NN \noligs                      \luatex_noligs:D
-  \__kernel_primitive:NN \nospace                     \luatex_nospace:D
+  \__kernel_primitive:NN \nospaces                    \luatex_nospaces:D
   \__kernel_primitive:NN \novrule                     \luatex_novrule:D
   \__kernel_primitive:NN \outputbox                   \luatex_outputbox:D
   \__kernel_primitive:NN \pageleftoffset              \luatex_pageleftoffset:D
@@ -843,6 +847,8 @@
   \__kernel_primitive:NN \suppresslongerror           \luatex_suppresslongerror:D
   \__kernel_primitive:NN \suppressmathparerror        \luatex_suppressmathparerror:D
   \__kernel_primitive:NN \suppressoutererror          \luatex_suppressoutererror:D
+  \__kernel_primitive:NN \toksapp                     \luatex_toksapp:D
+  \__kernel_primitive:NN \tokspre                     \luatex_tokspre:D
   \__kernel_primitive:NN \tpack                       \luatex_tpack:D
   \__kernel_primitive:NN \vpack                       \luatex_vpack:D
 %    \end{macrocode}
@@ -872,6 +878,8 @@
   \__kernel_primitive:NN \copyfont                    \pdftex_copyfont:D
   \__kernel_primitive:NN \draftmode                   \pdftex_draftmode:D
   \__kernel_primitive:NN \expandglyphsinfont          \pdftex_fontexpand:D
+  \__kernel_primitive:NN \ifabsdim                    \pdftex_ifabsdim:D
+  \__kernel_primitive:NN \ifabsnum                    \pdftex_ifabsnum:D
   \__kernel_primitive:NN \ignoreligaturesinfont       \pdftex_ignoreligaturesinfont:D
   \__kernel_primitive:NN \insertht                    \pdftex_insertht:D
   \__kernel_primitive:NN \lastsavedboxresourceindex   \pdftex_pdflastxform:D
