--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str.dtx Copyright (C) 2011-2015 The LaTeX3 Project
+%% File: l3str.dtx Copyright (C) 2011-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -425,8 +425,15 @@
 %     \iow_term:x { \str_range:nnn { abcdef } { -2 } { -1 } }
 %     \iow_term:x { \str_range:nnn { abcdef } { 0 } { -1 } }
 %   \end{verbatim}
-%   will print \texttt{bcd}, \texttt{cdef}, \texttt{ef}, and an empty
-%   line to the terminal.
+%   will print \texttt{bcde}, \texttt{cdef}, \texttt{ef}, and an empty
+%   line to the terminal. The \meta{start index} must always be smaller than
+%   or equal to the \meta{end index}: if this is not the case then no output
+%   is generated. Thus
+%   \begin{verbatim}
+%     \iow_term:x { \str_range:nnn { abcdef } { 5 } { 2 } }
+%     \iow_term:x { \str_range:nnn { abcdef } { -1 } { -4 } }
+%   \end{verbatim}
+%   both yield empty strings.
 % \end{function}
 %
 % \section{String manipulation}
