--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3candidates.dtx Copyright(C) 2012-2016 The LaTeX3 Project
+%% File: l3candidates.dtx Copyright (C) 2012-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -3074,7 +3074,7 @@
 %     \@@_change_case_output:nwn ,
 %     \@@_change_case_output:Vwn ,
 %     \@@_change_case_output:own ,
-%     \@@_change_case_output:Vwn ,
+%     \@@_change_case_output:vwn ,
 %     \@@_change_case_output:fwn ,
 %   }
 % \begin{macro}[aux, EXP]{\@@_change_case_end:wn}
