--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3348,7 +3348,7 @@
           {
             \char_generate:nn
               { \use:c { @@_lookup_ #1 :N } #2 }
-              { \char_value_catcode:n { `#2 } }
+              { \char_value_catcode:n { \use:c { @@_lookup_ #1 :N } #2 } }
           }
       }
     \cs_new_protected:Npn \@@_lookup_lower:N #1 { \tex_lccode:D `#1 }
