--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3coffins.dtx Copyright(C) 2010-2015 The LaTeX3 Project
+%% File: l3coffins.dtx Copyright(C) 2010-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -839,13 +839,13 @@
 \cs_new_protected:Npn \@@_update_corners:N #1
   {
     \prop_put:cnx { l_@@_corners_ \__int_value:w #1 _prop } { tl }
-      { { 0 pt } { \dim_use:N \box_ht:N #1 } }
+      { { 0 pt } { \dim_eval:n { \box_ht:N #1 } } }
     \prop_put:cnx { l_@@_corners_ \__int_value:w #1 _prop } { tr }
-      { { \dim_use:N \box_wd:N #1 } { \dim_use:N \box_ht:N #1 } }
+      { { \dim_eval:n { \box_wd:N #1 } } { \dim_eval:n { \box_ht:N #1 } } }
     \prop_put:cnx { l_@@_corners_ \__int_value:w #1 _prop } { bl }
       { { 0 pt } { \dim_eval:n { - \box_dp:N #1 } } }
     \prop_put:cnx { l_@@_corners_ \__int_value:w #1 _prop } { br }
-      { { \dim_use:N \box_wd:N #1 } { \dim_eval:n { - \box_dp:N #1 } } }
+      { { \dim_eval:n { \box_wd:N #1 } } { \dim_eval:n { -\box_dp:N #1 } } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -866,7 +866,7 @@
       }
     \prop_put:cnx { l_@@_poles_ \__int_value:w #1 _prop } { r }
       {
-        { \dim_use:N \box_wd:N #1 }
+        { \dim_eval:n { \box_wd:N #1 } }
         { 0 pt } { 0 pt } { 1000 pt }
       }
     \prop_put:cnx { l_@@_poles_ \__int_value:w #1 _prop } { vc }
@@ -879,7 +879,7 @@
     \prop_put:cnx { l_@@_poles_ \__int_value:w #1 _prop } { t }
       {
         { 0 pt }
-        { \dim_use:N \box_ht:N #1 }
+        { \dim_eval:n { \box_ht:N #1 } }
         { 1000 pt }
         { 0 pt }
       }
