--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3msg.dtx Copyright (C) 2009-2015 The LaTeX3 Project
+%% File: l3msg.dtx Copyright (C) 2009-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1790,7 +1790,7 @@
   { Message~'#2'~for~module~'#1'~already~defined. }
   {
     \c_@@_coding_error_text_tl
-    LaTeX~was~asked~to~define~a~new~message~called~'#2'\
+    LaTeX~was~asked~to~define~a~new~message~called~'#2'\\
     by~the~module~'#1':~this~message~already~exists.
     \c_@@_return_text_tl
   }
@@ -1858,7 +1858,7 @@
 \@@_kernel_new:nnnn { kernel } { out-of-registers }
   { No~room~for~a~new~#1. }
   {
-    TeX~only~supports~\int_use:N \c_max_register_int \
+    TeX~only~supports~\int_use:N \c_max_register_int \ %
     of~each~type.~All~the~#1~registers~have~been~used.~
     This~run~will~be~aborted~now.
   }
