--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -692,37 +692,75 @@
 %
 % \subsection{Images}
 %
+% \begin{variable}{\l_@@_image_attr_tl}
+%   In PDF mode, additional atributes of an image (such as page number) are
+%   needed both to obtain the bounding box and when inserting the image: this
+%   occurs as the image dictionary approach means they are read as part of
+%   the bounding box operation. As such, it is easier to track additional
+%   attributes using a dedicated |tl| rather than build up the same data
+%   twice.
+%    \begin{macrocode}
+\tl_new:N \l_@@_image_attr_tl
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}[int]
 %   {\@@_image_getbb_jpg:n, \@@_image_getbb_pdf:n, \@@_image_getbb_png:n}
-% \begin{macro}[aux]{\@@_image_getbb_jpg_aux:n}
+% \begin{macro}[aux]
+%   {\@@_image_getbb_auxi:n, \@@_image_getbb_auxii:n}
 %   Getting the bounding box here requires us to box up the image and
-%   measure it.
+%   measure it. To deal with the difference in feature support in bitmap
+%   and vector images but keeping the common parts, there is a little work
+%   to do in terms of auxiliaries. The key here is to notice that we need
+%   two forms of the attributes: a \enquote{short} set to allow us to
+%   track for caching, and the full form to pass to the primitive. Note that
+%   in |pdftex.def| the short reference is stored to be used in the inclusion
+%   stage: may be required when there are more aspects to track.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
-    \int_if_exist:cTF { c__image_ #1 _int }
-      {
-        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1 _urx__dim }
-        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1 _ury__dim }
-      }
-      { \@@_image_getbb_jpg_aux:n {#1} }
+    \int_zero:N \l__image_page_int
+    \tl_clear:N \l_@@_image_attr_tl
+    \@@_image_getbb_auxi:n {#1}
   }
-\cs_new_protected:Npn \@@_image_getbb_jpg_aux:n #1
+\cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
+\cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tex_immediate:D \pdftex_pdfximage:D {#1}
+    \tl_set:Nx \l_@@_image_attr_tl
+      {
+        \int_compare:nNnT \l__image_page_int > 0
+          { :P \int_use:N \l__image_page_int }
+      }
+    \@@_image_getbb_auxi:n {#1}
+  }
+\cs_new_protected:Npn \@@_image_getbb_auxi:n #1
+  {
+    \int_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _int }
+      {
+        \dim_set_eq:Nc \l__image_urx_dim
+          { c__image_ #1 \l_@@_image_attr_tl _urx__dim }
+        \dim_set_eq:Nc \l__image_ury_dim
+          { c__image_ #1 \l_@@_image_attr_tl _ury__dim }
+      }
+      { \@@_image_getbb_auxii:n {#1} }
+  }
+\cs_new_protected:Npn \@@_image_getbb_auxii:n #1
+  {
+    \tex_immediate:D \pdftex_pdfximage:D
+      \int_compare:nNnT \l__image_page_int > 0
+        { page ~ \int_use:N \l__image_page_int }
+      {#1}
     \hbox_set:Nn \l__image_tmp_box
       { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
-    \int_const:cn { c__image_ #1 _int }
+    \int_const:cn { c__image_ #1 \l_@@_image_attr_tl _int }
       { \tex_the:D \pdftex_pdflastximage:D }
     \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
     \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
-    \dim_const:cn { c__image_ #1 _urx__dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _urx__dim }
       { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1 _ury__dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ury__dim }
       { \l__image_ury_dim }
   }
-\cs_new_eq:NN \@@_image_getbb_pdf:n \@@_image_getbb_jpg:n
-\cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -730,12 +768,13 @@
 % \begin{macro}[int]
 %   {\@@_image_include_jpg:n, \@@_image_include_pdf:n, \@@_image_include_png:n}
 %   Images are already loaded for the measurement part of the code, so
-%   inclusion is straight-forward.
+%   inclusion is straight-forward, with only any attributes to worry about. The
+%   latter carry through from determination of the bounding box.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_jpg:n #1
   {
     \pdftex_pdfrefximage:D
-      \int_use:c { c__image_ #1 _int }
+      \int_use:c { c__image_ #1 \l_@@_image_attr_tl _int }
   }
 \cs_new_eq:NN \@@_image_include_pdf:n \@@_image_include_jpg:n
 \cs_new_eq:NN \@@_image_include_png:n \@@_image_include_jpg:n
@@ -894,8 +933,12 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_image_getbb_eps:n \__image_read_bb:n
 %<*dvipdfmx>
-\cs_new_eq:NN \@@_image_getbb_jpg:n \__image_extract_bb:n
-\cs_new_eq:NN \@@_image_getbb_pdf:n \__image_extract_bb:n
+\cs_new_protected:Npn \@@_image_getbb_jpg:n
+  {
+    \int_zero:N \l__image_page_int
+    \__image_extract_bb:n
+  }
+\cs_new_eq:NN \@@_image_getbb_pdf:n \@@_image_getbb_jpg:n
 \cs_new_eq:NN \@@_image_getbb_png:n \__image_extract_bb:n
 %</dvipdfmx>
 %    \end{macrocode}
@@ -919,7 +962,15 @@
 \cs_new_protected:Npn \@@_image_include_pdf:n #1
   { \@@_image_include_aux:nn {#1} { epdf } }
 \cs_new_protected:Npn \@@_image_include_aux:nn #1#2
-  { \tex_special:D { pdf:#2~(#1) } }
+  {
+    \tex_special:D
+      {
+        pdf:#2~
+        \int_compare:nNnT \l__image_page_int > 0
+          { page ~ \int_use:N \l__image_page_int \c_space_tl }
+        (#1)
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -965,35 +1016,52 @@
 %
 % \begin{macro}[int]
 %   {\@@_image_getbb_jpg:n, \@@_image_getbb_pdf:n, \@@_image_getbb_png:n}
-% \begin{macro}[aux]{\@@_image_getbb_auxi:nN, \@@_image_getbb_auxi:nN}
+% \begin{macro}[aux]{\@@_image_getbb_auxi:nN}
+% \begin{macro}[aux]{\@@_image_getbb_auxii:nnN, \@@_image_getbb_auxii:VnN}
+% \begin{macro}[aux]{\@@_image_getbb_auxiiii:nNnn, \@@_image_getbb_auxiv:nNnn}
 %   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
-%   the bounding box without needing \texttt{extractbb}.
+%   the bounding box without needing \texttt{extractbb}. The only complexity
+%   is passing the various minor variations to a common core process.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
-  { \@@_image_getbb_aux:nN {#1} \xetex_picfile:D }
+  {
+    \int_zero:N \l__image_page_int
+    \@@_image_getbb_aux:nN {#1} \xetex_picfile:D
+  }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   { \@@_image_getbb_aux:nN {#1} \xetex_pdffile:D }
 \cs_new_protected:Npn \@@_image_getbb_auxi:nN #1#2
   {
-    \dim_if_exist:cTF { c__image_ #1 _urx_dim }
-      {
-        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1 _urx__dim }
-        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1 _ury__dim }
-      }
-      { \@@_image_getbb_auxii:nN {#1} #2 }
+    \int_compare:nNnTF \l__image_page_int > 0
+      { \@@_image_getbb_auxii:VnN \l__image_page_int {#1} #2  }
+      { \@@_image_getbb_auxiii:nNnn {#1} #2 }
   }
-\cs_new_protected:Npn \@@_image_getbb_auxii:nN #1#2
+\cs_new_protected:Npn \@@_image_getbb_auxii:nnN #1#2#3
+  { \@@_image_getbb_aux:nNnn {#2} #3 { :P #1 } { page #1 } }
+\cs_generate_variant:Nn \@@_image_getbb_auxii:nnN { V }
+\cs_new_protected:Npn \@@_image_getbb_auxiiii:nNnn #1#2#3#4
   {
-    \hbox_set:Nn \l__image_tmp_box { #2 #1 ~ }
+    \dim_if_exist:cTF { c__image_ #1#3 _urx_dim }
+      {
+        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1#3 _urx__dim }
+        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1#3 _ury__dim }
+      }
+      { \@@_image_getbb_auxiv:nNnn {#1} #2 {#3} {#4}  }
+  }
+\cs_new_protected:Npn \@@_image_getbb_auxiv:nNnn #1#2#3#4
+  {
+    \hbox_set:Nn \l__image_tmp_box { #2 #1 ~ #4 }
     \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
     \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
-    \dim_const:cn { c__image_ #1 _urx__dim }
+    \dim_const:cn { c__image_ #1#3 _urx__dim }
       { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1 _ury__dim }
+    \dim_const:cn { c__image_ #1#3 _ury__dim }
       { \l__image_ury_dim }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
