--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -950,12 +950,21 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}[aux]{\g_@@_image_int}
+%   Used to track the object number associated with each image.
+%    \begin{macrocode}
+\int_new:N \g_@@_image_int
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}[int]
 %   {
 %     \@@_image_include_eps:n, \@@_image_include_jpg:n,
 %     \@@_image_include_pdf:n, \@@_image_include_png:n
 %   }
-%  \begin{macro}[aux]{\@@_image_include_aux:nn}
+%  \begin{macro}[aux]{\@@_image_include_auxi:nn}
+%  \begin{macro}[aux]{\@@_image_include_auxii:nnn, \@@_image_include_auxii:xnn}
+%  \begin{macro}[aux]{\@@_image_include_auxiii:nn}
 %  The special syntax depends on the file type.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_eps:n #1
@@ -963,15 +972,45 @@
     \tex_special:D { PSfile = #1 }
   }
 \cs_new_protected:Npn \@@_image_include_jpg:n #1
-  { \@@_image_include_aux:nn {#1} { image } }
+  { \@@_image_include_auxi:nn {#1} { image } }
 \cs_new_eq:NN \@@_image_include_png:n \@@_image_include_png:n
 \cs_new_protected:Npn \@@_image_include_pdf:n #1
-  { \@@_image_include_aux:nn {#1} { epdf } }
-\cs_new_protected:Npn \@@_image_include_aux:nn #1#2
+  { \@@_image_include_auxi:nn {#1} { epdf } }
+%    \end{macrocode}
+%   Image inclusion is set up to use the fact that each image is stored in
+%   the PDF as an XObject. This means that we can include repeated images
+%   only once and refer to them. To allow that, track the nature of each
+%   image: much the same as for the direct PDF mode case.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_image_include_auxi:nn #1#2
   {
+    \@@_image_include_auxii:xnn
+      {
+        \int_compare:nNnT \l__image_page_int > 0
+          { :P \int_use:N \l__image_page_int }
+        \tl_if_empty:NF \l__image_pagebox_tl
+          { : \l__image_pagebox_tl }
+      }
+      {#1} {#2}
+  }
+\cs_new_protected:Npn \@@_image_include_auxii:nnn #1#2#3
+  {
+    \int_if_exist:cTF { c__image_ #2#1 _int }
+      {
+        \tex_special:D
+          { pdf:usexobj~@image \int_use:c { c__image_ #2#1 _int } }
+      }
+      { \@@_image_include_auxiii:nn {#2} {#1} {#3} }
+  }
+\cs_generate_variant:Nn \@@_image_include_auxii:nnn { x }
+\cs_new_protected:Npn \@@_image_include_auxiii:nnn #1#2#3
+  {
+    \int_gincr:N \g_@@_image_int
+    \int_const:cn { c__image_ #1#2 _int } { \g_@@_image_int }
     \tex_special:D
       {
-        pdf:#2~
+        pdf:#3~
+        @image \int_use:c { c__image_ #1#2 _int }
         \int_compare:nNnT \l__image_page_int > 0
           { page ~ \int_use:N \l__image_page_int \c_space_tl }
         \tl_if_empty:NF \l__image_pagebox_tl
@@ -980,6 +1019,8 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
