--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1509,7 +1509,7 @@
 %    \begin{macrocode}
 \tl_put_left:Nn \@pushfilename
   {
-    \seq_gpush:Nx \g__file_stack_seq \@currname
+    \seq_gpush:Nx \g__file_stack_seq { \tl_to_str:N \@currname }
     \tl_put_left:Nx \l__expl_status_stack_tl
       {
         \bool_if:NTF \l__kernel_expl_bool
@@ -1531,7 +1531,7 @@
 \tl_put_right:Nn \@popfilename
   {
     \seq_gpop:NN \g__file_stack_seq \l__file_tmp_tl
-    \tl_gset_eq:NN \g_file_current_name_str \l__file_tmp_tl
+    \str_gset_eq:NN \g_file_current_name_str \l__file_tmp_tl
     \tl_if_empty:NTF \l__expl_status_stack_tl
       { \ExplSyntaxOff }
       { \exp_after:wN \__expl_status_pop:w \l__expl_status_stack_tl \q_stop }
