--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -126,9 +126,9 @@
 %   If the file is not found then the \meta{str var} will be empty.
 % \end{function}
 %
-% \begin{function}[added = 2017-06-20]{\file_parse_path:nNNN}
+% \begin{function}[added = 2017-06-23]{\file_parse_full_name:nNNN}
 %   \begin{syntax}
-%     \cs{file_parse_path:nNNN} \Arg{file path} \meta{dir} \meta{name} \meta{ext}
+%     \cs{file_parse_full_name:nNNN} \Arg{full name} \meta{dir} \meta{name} \meta{ext}
 %   \end{syntax}
 %   Parsers the \meta{file path} and splits it into three parts, each of
 %   which is returned by settings the appropriate local string variable:
@@ -1021,7 +1021,7 @@
         { \g_file_current_name_str }
         { \g_file_current_ext_str }
       }
-    \file_parse_path:nNNN {#1}
+    \file_parse_full_name:nNNN {#1}
       \l_@@_dir_str \l_@@_name_str \l_@@_ext_str
     \str_gset_eq:NN \g_file_current_dir_str  \l_@@_dir_str
     \str_gset_eq:NN \g_file_current_name_str \l_@@_name_str
@@ -1047,9 +1047,9 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\file_parse_path:nNNN}
+% \begin{macro}{\file_parse_full_name:nNNN}
 % \begin{macro}[aux]
-%   {\@@_parse_path_auxi:w, \@@_parse_path_auxii:w, \@@_parse_path_auxiii:w}
+%   {\@@_parse_full_name_auxi:w, \@@_parse_full_name_auxii:w, \@@_parse_full_name_auxiii:w}
 %   Parsing starts by stripping off any surrounding quotes. Assuming there is
 %   then something to read, the next step is to split off the directory.
 %   We don't want to add |/| until at least one parent directory is found,
@@ -1057,26 +1057,26 @@
 %   there is a second test for that construct at the end of directory
 %   discovery.
 %    \begin{macrocode}
-\cs_new_protected:Npn \file_parse_path:nNNN #1#2#3#4
+\cs_new_protected:Npn \file_parse_full_name:nNNN #1#2#3#4
   {
-    \@@_parse_path_auxi:w #1 " #1 " \q_stop #2#3#4
+    \@@_parse_full_name_auxi:w #1 " #1 " \q_stop #2#3#4
   }
-\cs_new_protected:Npn \@@_parse_path_auxi:w #1 " #2 " #3 \q_stop #4#5#6
+\cs_new_protected:Npn \@@_parse_full_name_auxi:w #1 " #2 " #3 \q_stop #4#5#6
   {
     \str_clear:N #4
     \str_clear:N #5
     \str_clear:N #6
     \tl_if_blank:nF {#2}
-     { \@@_parse_path_auxii:w #2 / \q_mark #2 \q_stop #4#5#6 }
+     { \@@_parse_full_name_auxii:w #2 / \q_mark #2 \q_stop #4#5#6 }
   }
-\cs_new_protected:Npn \@@_parse_path_auxii:w #1 / #2 \q_mark #3 \q_stop #4#5#6
+\cs_new_protected:Npn \@@_parse_full_name_auxii:w #1 / #2 \q_mark #3 \q_stop #4#5#6
   {
     \tl_if_blank:nTF {#2}
       {
         \tl_if_head_eq_charcode:nNT {#3} { / }
           { \str_set:Nx #4 { / #4 } }
         \tl_if_blank:nF {#1}
-          { \@@_parse_path_auxiii:w #1 . \q_stop #5#6 }
+          { \@@_parse_full_name_auxiii:w #1 . \q_stop #5#6 }
       }
       {
         \str_set:Nx #4
@@ -1085,7 +1085,7 @@
             \str_if_empty:NF #4 { / }
             #1
           }
-        \@@_parse_path_auxii:w #2 \q_mark #3 \q_stop #4#5#6
+        \@@_parse_full_name_auxii:w #2 \q_mark #3 \q_stop #4#5#6
       }
   }
 %    \end{macrocode}
@@ -1094,7 +1094,7 @@
 %   these are |.tex| files. We also use a loop here to deal with multi-dot
 %   names, \emph{cf.}~how \tn{filename@parse} would deal with this.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_parse_path_auxiii:w #1 . #2 \q_stop #3#4
+\cs_new_protected:Npn \@@_parse_full_name_auxiii:w #1 . #2 \q_stop #3#4
   {
     \tl_if_blank:nTF {#2}
       {
@@ -1112,7 +1112,7 @@
             \str_if_empty:NF #3 { . }
             #1
           }
-        \@@_parse_path_auxiii:w #2 \q_stop #3#4
+        \@@_parse_full_name_auxiii:w #2 \q_stop #3#4
       }
   }
 %    \end{macrocode}
