--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1469,25 +1469,31 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_if_exist_input:n #1
   {
-    \file_if_exist:nNT {#1} \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_path_str
+    \str_if_empty:NF \l__file_path_str
       { \@@_input:V \l__file_path_str }
   }
 \cs_new_protected:Npn \file_if_exist_input:nT #1#2
   {
-    \file_if_exist:nNT {#1} \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_path_str
+    \str_if_empty:NF \l__file_path_str
       {
         #2
         \@@_input:V \l__file_path_str
       }
   }
-\cs_new_protected:Npn \file_if_exist_input:nF #1
+\cs_new_protected:Npn \file_if_exist_input:nF #1#2
   {
-    \file_if_exist:nNTF {#1} \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      {#2}
       { \@@_input:V \l__file_path_str }
   }
-\cs_new_protected:Npn \file_if_exist_input:nTF #1#2
+\cs_new_protected:Npn \file_if_exist_input:nTF #1#2#3
   {
-    \file_if_exist:nNTF {#1} \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      {#3}
       {
         #2
         \@@_input:V \l__file_path_str
@@ -2162,7 +2168,9 @@
 \cs_generate_variant:Nn \tl_gset_from_file:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file:NNnn #1#2#3#4
   {
-    \file_if_exist:nNTF {#4} \l__file_path_str
+    \file_get_full_name:nN {#4} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      { \__file_missing:n {#4} }
       {
         \group_begin:
           \exp_args:No \etex_everyeof:D
@@ -2174,7 +2182,6 @@
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
-      { \__file_missing:n {#4} }
   }
 \exp_args:Nno \use:nn
   { \cs_new_protected:Npn \@@_from_file_do:w #1 }
@@ -2205,7 +2212,9 @@
 \cs_generate_variant:Nn \tl_gset_from_file_x:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file_x:NNnn #1#2#3#4
   {
-    \file_if_exist:nNTF {#4} \l__file_path_str
+    \file_get_full_name:nN {#4} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      { \__file_missing:n {#4} }
       {
         \group_begin:
           \etex_everyeof:D { \exp_not:N }
@@ -2215,7 +2224,6 @@
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
-      { \__file_missing:n {#4} }
   }
 %    \end{macrocode}
 % \end{macro}
